--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,10 +19,14 @@ jobs:
     - name: Install Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '18.20.3'
 
     - name: Install Yarn
       run: npm install -g yarn
+
+    - name: Install dependencies
+      run: yarn install
+      working-directory: client-app
 
     - name: Build with Gradle
       run: ./gradlew assemble
