--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,6 +19,9 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "resolutions": {
+    "postcss": "^8.3.11"
+  },
   "scripts": {
     "start": "export NODE_ENV=development && react-scripts start",
     "build": "react-scripts build",
