--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,6 +13,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "miragejs": "^0.1.41",
+    "postcss": "^8.3.11",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^5.3.0",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.5.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
